--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -48,6 +48,12 @@ layout: default
       {% include news.liquid limit=true %}
     {% endif %}
 
+    <!-- Experience -->
+    {% if page.experience and page.experience.enabled %}
+      <h2>experience</h2>
+      {% include experience.liquid limit=true %}
+    {% endif %}
+
     <!-- Latest posts -->
     {% if page.latest_posts and page.latest_posts.enabled %}
       <h2>
